# scdm_realworld

./: .gitignore  DEVEL_FOR_NEW_ROBOT.md  README.md  pyproject.toml
assets/: box_env.yaml  config.yaml  system_calibration.yaml
assets/gen3_allegro/: gen3_allegro.urdf  gen3_allegro_spherized.urdf  gen3_allegro_spherized.yml
scripts/: env_editor.py  ik_visualize.py  planning_visualize.py  system_calibrate.py  vis_kinova_realtime.py
src/scdm_realworld/: __init__.py  collision.py  env_editor_app.py  environment.py  main.py  main_app.py  planning.py  robot_model.py  robot_real.py  rrt_connect.py  runtime_config.py  sam3_client.py  sam_basic_example.py  sam_server.py  sam_server_fastapi_example.py  smoothing.py  system_calibrate_app.py
src/scdm_realworld/utils/: __init__.py  geometry.py
src/scdm_realworld/visualize/: camera_view.py  panels.py  pcd_visualize.py  robot_scene.py  urdf_visualize.py
